--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -206,7 +206,7 @@
         /interface l2tp-client remove [find comment="VPN-TUNNEL-BY-BNT"]<br>
         /ip route remove [find comment="VPN-TUNNEL-BY-BNT"]<br>
         /ip firewall nat remove [find comment="VPN-TUNNEL-BY-BNT"]<br>
-        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555; text-align:center">
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
       </div>
