--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -299,7 +299,7 @@
         "View Page Source" untuk melihat data "makeid"<br>
         3.Klik Generate, lalu copy paste langsung di terminal<br>
         4.Coba ping ke 1.1.1.1 atau 8.8.8.8 jika reply berarti anda sudah berhasil<br>
-        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555; text-align:center">
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
       </div>
