--- a/ecmp.html
+++ b/ecmp.html
@@ -319,7 +319,7 @@
         <br>/ip route remove [find comment="LB By BNT"]
         <br>/ip firewall mangle remove [find comment="LB By BNT"]
         <br>/routing table remove [find comment="LB By BNT"]
-        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555; text-align:center">
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
       </div>
