--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -651,7 +651,7 @@
         /ip firewall address-list remove [find list="List-IP-Games"]<br>
         /ip firewall address-list remove [find comment="ROUTING-GAME-BY-BNT"]<br>
         /routing table remove [find comment="ROUTING-GAME-BY-BNT"]
-        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555; text-align:center">
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
       </div>
