--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -627,7 +627,7 @@
       /ip route remove [find comment="VPN-GAME"]<br>
       /ip firewall nat remove [find comment="VPN-GAME"]<br>
       /ip firewall mangle remove [find new-routing-mark="vpn-routing-game"]
-        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555; text-align:center">
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
     </div>
