--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -35,12 +35,12 @@
       ul{list-style-type:square}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
-      #wrap{max-width:980px;margin:0 auto;padding:0 5px}
+      #wrap{max-width:1024px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{display:flex}
       .content{flex:1;float:right;width:55%;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;height:auto;border-radius:0 5px 5px 0}
       .sidebar{float:left;width:45%;background-color:#ddd;border:1px solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:15px}
-      label{padding-bottom:5px;display:inline-block;font-weight:400}
+      label{padding-bottom:5px;display:inline-block;font-weight:500}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
@@ -276,7 +276,7 @@
           <button type="button" onclick="location.reload()">Clear All</button>
         </div>
         <div class="content">
-          <span style="margin-left:2px;">Script Generator Result</span>
+          <span style="margin-left:2px;font-weight:500">Script Generator Result</span>
           <div class="list-output-content">
             <div id="showScript" style="padding:5px;white-space: nowrap;">
               <span style="color:#ff6600;">
