--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -212,7 +212,6 @@
       </div>
       <div class="footer">
         <div style="margin-top:0px; text-align:center">
-          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
           <div id="help-telegram" style="font-size:12px; text-align:left">       
             <br><br><b>HOW TO GET BOT / API / TOKEN TELEGRAM :</b><br>
             ----------------------------------------------------<br>
@@ -257,6 +256,9 @@
             <span style="color:yellow">/tool e-mail set address="74.125.200.109" from="Router Monitoring" password="rhcylubiwfhxycee" port="587" tls="starttls" user="backup.mikrotik.ros@gmail.com"</span>
           </div>
         </div>
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
+          © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+        </div>		
       </div>
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
