--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -151,7 +151,7 @@
       <div class="sidebar">
         <div style="display:flex">
           <div style="width:50%; margin-right:10px">
-            <label>Options</label> 
+            <label>Sending Options</label> 
             <select onchange="submit()" id="option-list">
               <option value="01">Telegram</option>
               <option value="02">Whatsapp</option>
