--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -211,9 +211,9 @@
         </div>
       </div>
       <div class="footer">
-        <div style="margin-top:0px; text-align:center">
+        <div style="margin-top:10px;">
           <div id="help-telegram" style="font-size:12px; text-align:left">       
-            <br><br><b>HOW TO GET BOT / API / TOKEN TELEGRAM :</b><br>
+            <b>HOW TO GET BOT / API / TOKEN TELEGRAM :</b><br>
             ----------------------------------------------------<br>
             1. Search in your Telegram <span style="color:yellow">@BotFather</span> or <a target="_blank" href="https://t.me/BotFather">https://t.me/BotFather</a><br>
             2. Send <span style="color:yellow">/newbot</span><br>
