--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -256,7 +256,7 @@
             <span style="color:yellow">/tool e-mail set address="74.125.200.109" from="Router Monitoring" password="rhcylubiwfhxycee" port="587" tls="starttls" user="backup.mikrotik.ros@gmail.com"</span>
           </div>
         </div>
-        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;text-align:left">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>		
       </div>
