--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -228,7 +228,7 @@
             Finaly test from your Browser <a target="_blank" href="https://api.telegram.org/bot<TOKEN>/sendMessage?chat_id=<CHAT_ID>&text=Hello%20World">https://api.telegram.org/bot<span style="color:white !important;">&lt;TOKEN&gt;</span>/sendMessage?chat_id=<span style="color:white !important;">&lt;CHAT_ID&gt;</span>&text=Hello%20World</a>
           </div>
           <div id="help-whatsapp" style="display:none;font-size:12px; text-align:left">       
-            <br><br><b>HOW TO GET WHATSAPP API KEY - <span style="color:yellow">( Free 3 days and 1$/Month )</span></b><br>
+            <b>HOW TO GET WHATSAPP API KEY - <span style="color:yellow">( Free 3 days and 1$/Month )</span></b><br>
             -----------------------------------------------------------------------<br>
             1. Go to <a target="_blank" href="https://textmebot.com">https://textmebot.com</a> and click Request ApiKey or fast link to <a target="_blank" href="https://textmebot.com/cancel/#lepopup-NewApiKey">#lepopup-NewApiKey</a><br>
             2. Add your <span style="color:yellow">Email Address</span> and then check your Email.<br>
@@ -239,14 +239,14 @@
             7. Only with <span style="color:yellow">$1/Month</span> and payment subscribe with <span style="color:yellow">PayPal</span><br>
           </div>
           <div id="help-sms" style="display:none;font-size:12px; text-align:left">       
-            <br><br><b>SET YOUR MIKROTIK AS SMS SERVER :</b><br>
+            <b>SET YOUR MIKROTIK AS SMS SERVER :</b><br>
             --------------------------------------------<br>
             1. Make sure the modem has been detected in the MikroTik <span style="color:yellow">System > Resources > USB</span><br>
             2. Next check on MikroTik <span style="color:yellow">System > Ports</span> to see the channel on the modem.<br>
             3. To test send and receive SMS on MikroTik, you can go to the <span style="color:yellow">Tools > SMS</span><br>
           </div>
           <div id="help-email" style="display:none;font-size:12px; text-align:left">       
-            <br><br><b>SET YOUR MIKROTIK MAIL SERVER :</b><br>
+            <b>SET YOUR MIKROTIK MAIL SERVER :</b><br>
             ----------------------------------------<br>
             <span style="color:yellow">Attention!</span> We do not send your MikroTik Monitoring to our email, but you can use our mail server to send MikroTik Monitoring to your email. if you don't like it you can use your own email server.<br><br>
             <b>Please copy-paste this script:</b><br><br>
