--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -29,7 +29,7 @@
       -------------------------------------------------- */  
       *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
       body,div,span,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td,tr,table{margin:0;padding:0}
-      body{font-size:15px;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin:0}
+      body{font-size:14px;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin:0}
       html,body{color:#292929;height:100%;width:100%;margin-top:0;padding:0;line-height:normal;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
       *{box-sizing:border-box}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
@@ -46,17 +46,17 @@
       a:visited{color:#f60}
       a:hover{color:#f60}
       a:active{color:#f60}
-      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:100%;font-weight:700;font-size:15px!important;cursor:pointer;border-radius:5px;color:#fff}
+      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:7px;width:100%;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
-      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:700;margin-bottom:5px;font-size:16px!important;border-radius:5px}
-      label{padding:10px 5px 5px 0;display:inline-block}
+      input[type=text],select,textarea{width:100%;padding:6px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:700;margin-bottom:10px;font-size:15px!important;border-radius:5px}
+      label{padding-bottom:5px;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       table,tr,td{border:none}
       table{font-family:arial,sans-serif;border-collapse:collapse;width:100%}
-      td,th{border:1px solid #ddd;text-align:left;padding:8px}
+      td,th{border:1px solid #ddd;text-align:left;padding:7px}
       table{width:100%}
       th{width:50%}
       .mikrotik-logo{display:none}
@@ -88,10 +88,9 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
-      .sidebar,.content{padding:5px}	  
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
-      }homepage{display:none}
+      homepage{display:none}
       }
     </style>
   </head>
@@ -144,7 +143,7 @@
       </div>
       <div class="main-wrap">
         <div class="sidebar">
-          <div style="width:100%;border-bottom:1px solid #999;">
+          <div style="width:100%;border-bottom:1px solid #bbb;margin-bottom:10px">
             <label><b>PCQ QUEUE SIZE</b></label>
 			</div>
 			<div style="width:100%;">
@@ -155,7 +154,7 @@
             <label>Queue Size (Limit)</label>
             <input type="text" id="queue-size" style='color: Chocolate;' placeholder="50" value="50" onkeypress="return event.charCode != 32">
           </div>
-          <div style="width:100%;border-bottom:1px solid #999;margin-top:10px">
+          <div style="width:100%;border-bottom:1px solid #bbb;margin-top:20px;margin-bottom:10px">
             <label><b>PCQ BURST RATE</b></label>
           </div>
           <div style="width:100%;">
@@ -170,11 +169,11 @@
             <label>Actual Burst Time (s)</label><br>
             <input type="text" id="interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32">
           </div>
-          <button style="margin-bottom:25px;margin-bottom:10px" id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
+          <button id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
         </div>
         <div class="content">
           <span style="margin-left:2px;font-size:15px"><b>COPY PASTE BURST RESULT ON WINBOX</b></span>
-          <div class="list-output-content" style="margin-bottom:10px">
+          <div class="list-output-content">
             <table style="font-weight:normal">
               <thead>
                 <tr style="background-color: #eee;font-weight:normal">
