--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -29,7 +29,7 @@
       -------------------------------------------------------------------- */  
       *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
       body,div,span,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td,tr,table{margin:0;padding:0}
-      body{font-size:15px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
+      body{font-size:14px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
       html,body{color:#292929;height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
       *{box-sizing:border-box}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
@@ -51,7 +51,7 @@
       .row:after{content:"";display:table;clear:both}
       input[type=checkbox]{margin-right:7px}
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;margin-bottom:12px;font-size:16px!important;border-radius:5px}
-      label{padding:5px 5px 5px 0;display:inline-block;width:100%}
+      label{padding:5px 5px 5px 0;display:inline-block;width:100%; font-weight:500}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right;border-radius:5px}
       input[type=submit]:hover{background-color:#45a049}
       .list-output-content{height:522px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:8px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
@@ -168,7 +168,7 @@
           <div style="clear: both;"></div>
         </div>
         <div class="content">
-          <span style="margin-left:2px">Copy-Paste the Script to the Terminal.</span>
+          <span style="margin-left:2px;font-weight:500">Copy-Paste the Script to the Terminal.</span>
           <div class="list-output-content">
             <div id="showScript">
               <span style="color:#ff6600;">
@@ -184,7 +184,7 @@
           <br>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <button type="button" value="Open window" onclick="printvoucher()">Print Voucher</button>
-          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:600; font-size:14px" class="d-link"><a class="download" href="#" download="user.rsc">save user.rsc</a></span><br>
+          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:600; font-size:14px" class="d-link"> [ <a class="download" href="#" download="user.rsc">save user.rsc</a> ]</span><br>
         </div>
       </div>
       <div class="footer">
