--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -29,16 +29,16 @@
       -------------------------------------------------------- */  
       *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
       body,div,span,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td,tr,table{margin:0;padding:0}
-      body{font-size:15px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
+      body{font-size:14px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
       html,body{color:#292929;height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat;color:#333}
       *{box-sizing:border-box}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
-      #wrap{max-width:800px;margin:0 auto;padding:0 5px}
+      #wrap{max-width:750px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{background-color:#f60}
-      .content{float:right;width:100%;padding:25px;border-top:1px solid #bbb;background:#ddd;border-radius:0 0 5px 5px}
-      .sidebar{float:left;width:100%;padding:25px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px 5px 0 0}
+      .content{float:right;width:100%;padding:15px;border-top:1px solid #bbb;background:#ddd;border-radius:0 0 5px 5px}
+      .sidebar{float:left;width:100%;padding:15px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px 5px 0 0}
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
@@ -46,11 +46,11 @@
       a:visited{color:#f60}
       a:hover{color:#f60}
       a:active{color:#f60}
-      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:137px;font-weight:700;font-size:15px!important;cursor:pointer;border-radius:5px;color:#fff}
+      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:137px;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
-      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;margin-bottom:5px;font-size:16px!important;border-radius:5px}
-      label{padding:5px 5px 5px 0;display:inline-block}
+      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;margin-bottom:5px;font-size:14px!important;border-radius:5px}
+      label{padding:5px 5px 5px 0;display:inline-block; font-weight:500}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .list-output-content{height:250px;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:10px;margin-top:10px;border:1px solid #ccc;border-radius:5px;}
@@ -150,7 +150,7 @@
         </div>
       </div>
       <div class="content">
-        <span style="margin-left:2px">Script Generator Result</span>
+        <span style="margin-left:2px;font-weight:500">Script Generator Result</span>
         <div class="list-output-content">
           <div id="showScript">
             <span style="color:#ff6600;">
