--- a/queue-tree-generator-shared.html
+++ b/queue-tree-generator-shared.html
@@ -55,7 +55,7 @@
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .row:after{content:"";display:table;clear:both}
-      .list-output-content{height:480px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:5px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
+      .list-output-content{height:475px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:5px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
       .mikrotik-logo{display:none}
       @media screen and (max-width:700px) {
       .list-output-content{height:auto}
@@ -167,7 +167,7 @@
               <input onkeydown="upperCaseF(this)" type="text" id="input-down-parent" value="10M" placeholder="10M">
             </div>
           </div>
-          <div style="margin-top:15px;margin-bottom:10px;border-bottom:1px solid #bbb;padding-bottom:5px;font-weight:500">Sub Parent Queue / Child Queue</div>
+          <div style="margin-top:10px;margin-bottom:10px;padding-bottom:5px;border-bottom:1px solid #bbb;font-weight:500; color:#f60">Sub Parent Queue / Child Queue</div>
           <div style="display:flex">
             <div style="width:100%;">
               <label>Client Name Queue</label>
