--- a/simple-queue-generator.html
+++ b/simple-queue-generator.html
@@ -84,7 +84,6 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
-	  	  
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       }
@@ -156,7 +155,7 @@
               <input onkeydown="upperCaseF(this)" type="text" id="input-down-parent" value="10M" placeholder="10M">
             </div>
           </div>
-          <div style="margin-top:10px;margin-bottom:10px;border-bottom:1px solid #bbb;padding-bottom:5px">Sub Parent Queue / Child Queue</div>
+          <div style="margin-top:10px;margin-bottom:10px;padding-bottom:5px;border-bottom:1px solid #bbb;font-weight:500; color:#f60">Sub Parent Queue / Child Queue</div>
           <div style="display:flex">
             <div style="float:left;width:100%">
               <label>Client Name Queue</label>
