--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -29,7 +29,7 @@
       -------------------------------------------------- */  
       *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
       body,div,span,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td,tr,table{margin:0;padding:0}
-      body{font-size:15px;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin:0}
+      body{font-size:14px;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin:0}
       html,body{color:#292929;height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat;color:#333}
       *{box-sizing:border-box}
       .logo{margin-top:10px;margin-bottom:5px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
@@ -47,11 +47,11 @@
       a:hover{color:#f60}
       a:active{color:#f60}
       .menu{clear:both;width:auto;padding-bottom:13px}
-      button{background-color:#f60;border:none;color:#000;padding:5px 10px;text-align:center;text-decoration:none;display:inline-block;margin:0 2px;cursor:pointer;border-radius:5px;color:#fff;font-size:15px}
-      button:hover{background-color:#ccc;color:#111}
+      button{background-color:#f60;border:none;color:#000;padding:5px 10px;text-align:center;text-decoration:none;display:inline-block;margin:0 2px;cursor:pointer;border-radius:5px;color:#fff;font-size:14px;font-weight:bold}
+      button:hover{background-color:#ccc;color:#111;}
       .row:after{content:"";display:table;clear:both}
-      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:400;margin-bottom:0;font-size:14px!important;border-radius:5px}
-      label{padding:5px 5px 5px 0;display:inline-block}
+      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:400;margin-bottom:0px;font-size:14px!important;border-radius:5px}
+      label{padding-bottom:5px;display:inline-block; font-weight:500}
       input[type=submit]{background-color:#f60;color:#fff;padding:3px;border:none;border-radius:5px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .row:after{content:"";display:table;clear:both}
