--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -150,8 +150,8 @@
         <div class="sidebar">
           <label>RouterOS Version</label><br>
           <select onchange="myFunction()" id="ros-list">
-            <option value="ros6">ROS v6.xx</option>
-            <option value="ros7">ROS v7.xx</option>
+            <option value="ros6">RouterOS v6.xx</option>
+            <option value="ros7">RouterOS v7.xx</option>
           </select>
           <div style="margin-top:10px;margin-bottom:10px">
             <label>Gateway to WAN or ISP Game</label>
