--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -34,7 +34,7 @@
       *{box-sizing:border-box}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
-      #wrap{max-width:850px;margin:0 auto;padding:0 5px}
+      #wrap{max-width:900px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{display:flex}
       .content{flex:1;float:right;width:65%;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
@@ -150,10 +150,10 @@
               <input type="text" id="input-mail-port" value="587" placeholder="587">
             </div>
             <div style="width:50%">
-              <label>ROS Version</label>
+              <label>RouterOS Version</label>
               <select id="ros-version">
-                <option value="ROS6">ROS v6.x</option>
-                <option value="ROS7">ROS v7.x</option>
+                <option value="ROS6">RouterOS v6.xx</option>
+                <option value="ROS7">RouterOS v7.xx</option>
               </select>
             </div>
           </div>
