--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -47,7 +47,7 @@
       a:hover{color:#f60}
       a:active{color:#f60}
       .menu{clear:both;width:auto;padding-bottom:13px}
-      button{background-color:#f60;border:none;color:#000;padding:5px 10px;text-align:center;text-decoration:none;display:inline-block;margin:0 2px;cursor:pointer;border-radius:5px;color:#fff;font-size:14px; font-weight:bold}
+      button{background-color:#f60;border:none;color:#000;padding:5px 10px;text-align:center;text-decoration:none;display:inline-block;margin:0 2px;cursor:pointer;border-radius:5px;color:#fff;font-size:14px;}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:400;margin-bottom:10px;font-size:14px!important;border-radius:5px}
