--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       ----------------------------------------------- */  
       body{background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:15px;line-height:normal;word-wrap:break-word;margin:0;padding:0;color:#292929}
       h1{font-size:52px;color:#292929;font-weight:600;line-height:1.3;margin:0}
-      h2{font-weight:700;font-size:17px;color:#292929;border-bottom:1px solid #ccc;margin-bottom:6px;padding-bottom:3px}
+      h2{font-weight:bold;font-size:19px;color:#292929;border-bottom:1px solid #ccc;margin-bottom:6px;padding-bottom:3px}
       h3,h4,h5,h6{font-weight:400;font-size:17px;color:#292929;margin-bottom:10px;padding-bottom:10px}
       pre{white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;white-space:pre-wrap;word-wrap:break-word}
       b{font-size:15px}
@@ -143,12 +143,14 @@
       .terminal img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
       @media screen and (max-width:1024px) {
       h1{font-size:45px}
+	  h2{font-size:19px}
       .logo-left a{font-size:21px}
       }
       @media screen and (max-width:768px) {
       .logo-left a{margin-top:5px!important;font-size:20px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:40px}
+	  h2{font-size:18px}
       .content{width:100%!important;padding:15px}
       .mymenu{width:100%!important}
       .logo{width:100%}
@@ -168,6 +170,7 @@
       .show-login-menu{display:flex;justify-content:center;width:100%;margin-bottom:10px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       h1{font-size:30px}
+	  h2{font-size:17px}
       .gsc-search-box{display:none!important}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .mymenu{padding-left:0;padding-right:0}
