--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+	  h1{font-size:25px}
       .hide-homepage{display:none}
       }
       @media print {
