--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -196,7 +196,7 @@
             </div>
           </div>
           <br>
-          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:400;margin-left:10px">copy-paste script to terminal.</span>
+          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:400;margin-left:10px">Copy-Paste to Terminal.</span>
         </div>
       </div>
       <div class="footer">
