--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -616,7 +616,7 @@
           </div>
         </div>
         <br>
-        <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:600;margin-left:10px;font-size:14px">Copy-Paste Script to Terminal.</span>
+        <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:600;margin-left:10px;font-size:14px">Copy-Paste to Terminal.</span>
       </div>
     </div>
     <div class="footer">
