--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -54,7 +54,7 @@
       label{padding:5px 5px 5px 0;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .column{float:left;width:50%}
+      .column{float:left;width:33.3%}
       .row:after{content:"";display:table;clear:both}
       .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:10px;margin-top:10px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
       .class-input{display:flex;}
@@ -166,8 +166,9 @@
           </div>
         </div>
         <div style="clear:both"></div>
-          <label><b>More Hide Protection from Internet (WAN) Scanning</b></label><br>
-          <div class="row">
+          <label><b>More Hidden Protections from Internet (WAN) Scanning</b></label><br>
+          <div style="border-bottom:1px solid #bbb; margin-top:2px;  margin-bottom:5px"></div>
+		  <div class="row">
             <div class="column">
               <input type="checkbox" id="mikrotik-winbox" >
               <label for="mikrotik-winbox">Block Winbox Scan</label><br>
@@ -177,24 +178,27 @@
               <label for="mikrotik-mac-server">Block Mac Server</label><br>
               <input type="checkbox" id="mikrotik-traceroute" >
               <label for="mikrotik-traceroute">Block Traceroute</label><br>
+            </div>
+            <div class="column">
               <input type="checkbox" id="mikrotik-rommon" >
               <label for="mikrotik-rommon">Block RoMON</label><br>
               <input type="checkbox" id="mikrotik-dns" >
-              <label for="mikrotik-dns">Block Open DNS</label><br>
-            </div>
-            <div class="column">
+              <label for="mikrotik-dns">Block Open DNS</label><br>			
               <input type="checkbox" id="mikrotik-proxy" >
               <label for="mikrotik-proxy">Block Open PROXY</label><br>
               <input type="checkbox" id="mikrotik-btest" >
               <label for="mikrotik-btest">Block BTest</label><br>
+            </div>
+            <div class="column">			  
               <input type="checkbox" id="mikrotik-snmp" >
-              <label for="mikrotik-snmp">Block SNMP</label><br>
+              <label for="mikrotik-snmp">Block SNMP</label><br>			
               <input type="checkbox" id="mikrotik-thedude" >
               <label for="mikrotik-thedude">Block The Dude</label><br>
               <input type="checkbox" id="mikrotik-ipcloud" >
               <label for="mikrotik-ipcloud">Block IP Cloud</label><br>
             </div>
           </div>
+		  <div style="border-bottom:1px solid #bbb; margin-top:2px;"></div>
         <div style="margin-top:25px"></div>
         <button style="margin-top:-5px" type="button" onclick="myFunction()">Generate</button> 
         <button style="margin-top:-5px" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> 
