--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -148,9 +148,9 @@
       </div>
       <div class="sidebar">
         <h1>ADVANCED MIKROTIK ROUTER-OS PROTECTION</h1>
-        <span style="color:red; font-weight:bold; font-size:15px;">Disclaimer!</span> We are not responsible for errors or damage or your router is
-        locked due to deliberate or accidental factors, you should ask for help from a friend who understands trying it.    
-        <br>  <br>  
+                              <div style="font-size:13px; color:#666; margin-top:20px; margin-bottom:5px;justify-content:center"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
+            </div>  
+        <br>  
         <table>
           <tr>
             <th style="width:30%;background-color:#ccc; font-size:14px">Mikrotik Port Service</th>
